--- a/index.html
+++ b/index.html
@@ -63,31 +63,54 @@
             <button>Оставить заявку</button>
         </div>
     </div>
-    <div class="l3">
-            <h1>Почему брус и строительство стоит заказать именно у нас</h1>
-            <div>
-                <h3>Уникальный профиль</h3>
-                <p>Профилированный брус с увеличенным двойным шип пазом ускоряет сборку и исключает продувание дома, что дает существенную экономию Вашего бюджета на отоплении.</p>
-                <img>
-                <img>
-            </div>
-            <div>
-                <img>
-                <h2>Непродуваемый угол</h2>
-                <p>В отличии от обычных чаш, выполненных по устаревшей методике и оборудовании или ручным методом, наша чашка "Двойной замок" изготовлена на современных станках, обладает сложным профилем, исключает продувание и промерзание углов даже в наших Сибирских широтах.</p>
-            </div>
-            <div>
-                <h2>Строительство профессионалами</h2>
-                <p>В нашей компании работают специалисты с более чем 6 летним опытом в гражданском строительстве, сборке деревянных домов, средний стаж которых составляет 12 лет.Специалисты постоянно проходят повышение квалификации, изучают современные технологии в строительстве, что гарантирует  качественно выполненную работу с соблюдением технологии сборки и строительства.</p>
-            </div>
+    <div class="lps">
+        <h1><i class="fas fa-phone-volume"></i> +7 952 172 97 77</h1>
+        <p><b>ЗВОНИТЕ!</b> Готовы обсудить все вопросы.</p>
+        <div><h2>Осущетвляем доставку своим транспортом!</h2></div>
     </div>
-
+    <div class="l3">
+        <h1>Почему брус и строительство стоит заказать именно у нас</h1>
+        <i class="fas fa-stroopwafel"></i>
+        <div>
+            <h2>Уникальный профиль</h2>
+            <p>Профилированный брус с увеличенным двойным шип пазом ускоряет сборку и исключает продувание дома, что дает существенную экономию Вашего бюджета на отоплении.</p>
+            <img>
+            <img>
+        </div>
+        <div>
+            <i class="fas fa-stroopwafel"></i>
+            <img>
+            <h2>Непродуваемый угол</h2>
+            <p>В отличии от обычных чаш, выполненных по устаревшей методике и оборудовании или ручным методом, наша чашка "Двойной замок" изготовлена на современных станках, обладает сложным профилем, исключает продувание и промерзание углов даже в наших Сибирских широтах.</p>
+        </div>
+        <div>
+            <i class="fas fa-stroopwafel"></i>
+            <h2>Строительство профессионалами</h2>
+            <p>В нашей компании работают специалисты с более чем 6 летним опытом в гражданском строительстве, сборке деревянных домов, средний стаж которых составляет 12 лет.Специалисты постоянно проходят повышение квалификации, изучают современные технологии в строительстве, что гарантирует  качественно выполненную работу с соблюдением технологии сборки и строительства.</p>
+        </div>
+    </div>
+    <div class="l4">
+        <div class="l4-s1">
+            <div>
+                <img src="img/l4 (1).jpg" alt="">
+            </div>
+            <div class="l4-s1-r2">
+                <img src="img/l4 (2).jpg" alt="">
+                <img src="img/l4 (3).jpg" alt="">
+            </div>
+        </div>
+        <div class="l4-s2">
+            <div><img src="img/l4 (4).jpg" alt=""></div>
+            <div class="l4-s2-r2"><a><i class="fas fa-angle-double-right"></i></a></div>
+        </div>
+    </div>
     <footer>
         <h1>Контакты</h1>
         <p><b>Офис:</b> Кемерово, ТЦ "Восточный ветер" ул. Тухачевского, 50/5, 4 этаж, офис 30</p>
         <p><b>Телефоны:</b> +7 3842 590 777<br>+7 952 172 97 77</p>
         <p><b>email:</b>stroyka.kem@mail.ru</p>
         <p><a href="https://vk.com/club150133443"><i class="fab fa-vk"></i></a></p>
+        <p>© «Дрим Хаус» 2015-2019</p>
     </footer>
 </body>
 </html>
