--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
     <header>
         <div class="header-mobile">
             <a class="logo" href="/">ДХ</a>
+            <a class="logo2" href="/">Дрим Хаус</a>
             <a class="hm-b-message" href="#"><i class="fab fa-telegram-plane"></i></a>
             <a class="hm-b-call" href="#"><i class="fas fa-phone"></i></a>
             <a class="hm-b-bar" href="#"><i class="fas fa-bars"></i></a>
+        </div>
+        <div class="header-table">
+            <div class="tlogo">Дрим Хаус</div>
         </div>
     </header>
     <div class="l1">
@@ -25,42 +29,46 @@
     </div>
     <div class="l2">
         <h2>Ассортимент услуг</h2>
-        <div class="brus">
-            <div>
-                <img src="img/l2.png">
-                <h3><a href="#">Профилированный брус</a>
-                    <p>140x140 | 140x190 | 190x190</p>
-                </h3>
-                <p>
-                    Длина - до 6 метров
-                </p>
+        <div class="table">
+            <div class="brus">
+                <div>
+                    <img src="img/l2.png">
+                    <h3><a href="#">Профилированный брус</a>
+                        <p>140x140 | 140x190 | 190x190</p>
+                    </h3>
+                    <p>
+                        Длина - до 6 метров
+                    </p>
+                </div>
+                <div class="cena">
+                    <h3>Цена на проф.брус</h3>
+                    <p>Пихта - 9 500 руб./куб.м.</p>
+                    <p>Сосна - 10 500 руб./куб.м.</p>
+                    <p>Кедр - 11 500 руб./куб.м.</p>
+                    <h3>Цена за домокомплект с нарезанными чашками</h3>
+                    <p>Пихта - 11 500 руб./куб.м.</p>
+                    <p>Сосна - 12 000 руб./куб.м.</p>
+                    <p>Кедр - 13 500 руб./куб.м.</p>
+                </div>
+                <button>Заказать брус</button>
             </div>
-            <div class="cena">
-                <h3>Цена на проф.брус</h3>
-                <p>Пихта - 9 500 руб./куб.м.</p>
-                <p>Сосна - 10 500 руб./куб.м.</p>
-                <p>Кедр - 11 500 руб./куб.м.</p>
-                <h3>Цена за домокомплект с нарезанными чашками</h3>
-                <p>Пихта - 11 500 руб./куб.м.</p>
-                <p>Сосна - 12 000 руб./куб.м.</p>
-                <p>Кедр - 13 500 руб./куб.м.</p>
+            <div class="table2">
+                <div class="komplekt">
+                    <img src="img/l22.png" alt="">
+                    <h3>Собрать домокомплет</h3>
+                    <button>Заказ</button>
+                </div>
+                <div class="projekt">
+                    <img src="img/l23.png">
+                    <h3>Подготовить проект Вашего дома</h3>
+                    <button>Подготовить проект</button>
+                </div>
+                <div class="key">
+                    <img src="img/l24.png">
+                    <h3>Строительство "под ключ"</h3>
+                    <button>Оставить заявку</button>
+                </div>
             </div>
-            <button>Заказать брус</button>
-        </div>
-        <div class="komplekt">
-            <img src="img/l22.png" alt="">
-            <h3>Собрать домокомплет</h3>
-            <button>Заказ</button>
-        </div>
-        <div class="projekt">
-            <img src="img/l23.png">
-            <h3>Подготовить проект Вашего дома</h3>
-            <button>Подготовить проект</button>
-        </div>
-        <div class="key">
-            <img src="img/l24.png">
-            <h3>Строительство "под ключ"</h3>
-            <button>Оставить заявку</button>
         </div>
     </div>
     <div class="lps">
