--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Дрим Хаус</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css">
-    <script src="main.js"></script>
+    <link rel="stylesheet" href="css/css.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
 <body>
@@ -30,10 +30,22 @@
         </div>
     </header>
     <div class="l1-2">
-        <div><i class="far fa-clock"></i></div>
-        <div><i class="fas fa-car-side"></i></div>
-        <div><i class="fas fa-industry"></i></div>
-        <div><i class="far fa-money-bill-alt"></i></div>
+        <div>
+            <i class="far fa-clock"></i>
+            <p>Срок выполнения заказа 5-7 дней</p>
+        </div>
+        <div>
+            <i class="fas fa-car-side"></i>
+            <p>Поставка бруса в любых объемах</p>
+        </div>
+        <div>
+            <i class="fas fa-industry"></i>
+            <p>Европейская производственная линия</p>
+        </div>
+        <div>
+            <i class="far fa-money-bill-alt"></i>
+            <p>Лучшая цена на брус в городе</p>
+        </div>
     </div>
     <div class="l1">
         <h2>Продажа бруса и малоэтажное строительство</h2>
@@ -94,44 +106,71 @@
         <div class="l3cont">
             <div class="l3-st">
                 <div><h2>Уникальный профиль</h2>
-                    <p>Профилированный брус с увеличенным двойным шип пазом ускоряет сборку и исключает продувание дома, что дает существенную экономию Вашего бюджета на отоплении.</p></div>
-                    <div><img src="/img/l2.png" alt=""></div>
+                    <p>Профилированный брус с увеличенным двойным шип пазом ускоряет сборку и исключает продувание дома, что дает существенную экономию Вашего бюджета на отоплении.</p>
                 </div>
-                <div class="l3-st">
-                    <div><img src="/img/l2.png" alt=""></div>
-                    <div><h2>Непродуваемый угол</h2>
-                        <p>В отличии от обычных чаш, выполненных по устаревшей методике и оборудовании или ручным методом, наша чашка "Двойной замок" изготовлена на современных станках, обладает сложным профилем, исключает продувание и промерзание углов даже в наших Сибирских широтах.</p></div>
-                    </div>
-                    <div class="l3-st">
-                        <div><h2>Строительство профессионалами</h2>
-                            <p>В нашей компании работают специалисты с более чем 6 летним опытом в гражданском строительстве, сборке деревянных домов, средний стаж которых составляет 12 лет.Специалисты постоянно проходят повышение квалификации, изучают современные технологии в строительстве, что гарантирует  качественно выполненную работу с соблюдением технологии сборки и строительства.</p></div>
-                            <div><img src="/img/l2.png" alt=""></div>
+                <div><img src="/img/l2.png" alt=""></div>
+            </div>
+            <div class="l3-st">
+                <div><img src="/img/l2.png" alt=""></div>
+                <div><h2>Непродуваемый угол</h2>
+                    <p>В отличии от обычных чаш, выполненных по устаревшей методике и оборудовании или ручным методом, наша чашка "Двойной замок" изготовлена на современных станках, обладает сложным профилем, исключает продувание и промерзание углов даже в наших Сибирских широтах.</p>
+                </div>
+            </div>
+            <div class="l3-st">
+                <div><h2>Строительство профессионалами</h2>
+                    <p>В нашей компании работают специалисты с более чем 6 летним опытом в гражданском строительстве, сборке деревянных домов, средний стаж которых составляет 12 лет.Специалисты постоянно проходят повышение квалификации, изучают современные технологии в строительстве, что гарантирует  качественно выполненную работу с соблюдением технологии сборки и строительства.</p>
+                </div>
+                <div><img src="/img/l2.png" alt=""></div>
+            </div>
+        </div>
+    </div>
+    <!-- <div class="l4">
+        <div class="l4-s1">
+            <div>
+                <img src="img/l4 (1).jpg" alt="">
+            </div>
+            <div class="l4-s1-r2">
+                <img src="img/l4 (2).jpg" alt="">
+                <img src="img/l4 (3).jpg" alt="">
+            </div>
+        </div>
+        <div class="l4-s2">
+            <div><img src="img/l4 (4).jpg" alt=""></div>
+            <div class="l4-s2-r2"><a><i class="fas fa-angle-double-right"></i></a></div>
+        </div>
+    </div> -->
+    <div id="lg">
+            <div class="row centered">
+                <h2>Наше производство</h2>
+                <div class="slider">
+                    <div class="slider__wrapper">
+                        <div class="slider__item">
+                            <img src="img/l4 (1).jpg">
+                        </div>
+                        <div class="slider__item">
+                            <img src="img/l4 (2).jpg">
+                        </div>
+                        <div class="slider__item">
+                            <img src="img/l4 (3).jpg">
+                        </div>      
+                        <div class="slider__item">
+                            <img src="img/l4 (4).jpg">
                         </div>
                     </div>
+                    <a class="slider__control slider__control_left" href="#lg" role="button"></a>
+                    <a class="slider__control slider__control_right slider__control_show" href="#lg" role="button"></a>
                 </div>
-                <div class="l4">
-                    <div class="l4-s1">
-                        <div>
-                            <img src="img/l4 (1).jpg" alt="">
-                        </div>
-                        <div class="l4-s1-r2">
-                            <img src="img/l4 (2).jpg" alt="">
-                            <img src="img/l4 (3).jpg" alt="">
-                        </div>
-                    </div>
-                    <div class="l4-s2">
-                        <div><img src="img/l4 (4).jpg" alt=""></div>
-                        <div class="l4-s2-r2"><a><i class="fas fa-angle-double-right"></i></a></div>
-                    </div>
-                </div>
-                <footer>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2270.336127790467!2d86.13394571605266!3d55.31721633296912!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x42d80ee8609bdcb7%3A0x82391c335a31c004!2z0JLQvtGB0YLQvtGH0L3Ri9C5INCy0LXRgtC10YA!5e0!3m2!1sru!2sru!4v1544445670380"  allowfullscreen></iframe>
-                    <h1>Контакты</h1>
-                    <p><b>Офис:</b> Кемерово, ТЦ "Восточный ветер" ул. Тухачевского, 50/5, 4 этаж, офис 30</p>
-                    <p><b>Телефоны:</b> +7 3842 590 777<br>+7 952 172 97 77</p>
-                    <p><b>email:</b>stroyka.kem@mail.ru</p>
-                    <p><a href="https://vk.com/club150133443"><i class="fab fa-vk"></i></a></p>
-                    <p>© «Дрим Хаус» 2015-2019</p>
-                </footer>
-            </body>
-            </html>
+            </div>
+        </div>
+    <footer>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2270.336127790467!2d86.13394571605266!3d55.31721633296912!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x42d80ee8609bdcb7%3A0x82391c335a31c004!2z0JLQvtGB0YLQvtGH0L3Ri9C5INCy0LXRgtC10YA!5e0!3m2!1sru!2sru!4v1544445670380"  allowfullscreen></iframe>
+        <h1>Контакты</h1>
+        <p><b>Офис:</b> Кемерово, ТЦ "Восточный ветер" ул. Тухачевского, 50/5, 4 этаж, офис 30</p>
+        <p><b>Телефоны:</b> +7 3842 590 777<br>+7 952 172 97 77</p>
+        <p><b>email:</b>stroyka.kem@mail.ru</p>
+        <p><a href="https://vk.com/club150133443"><i class="fab fa-vk"></i></a></p>
+        <p>© «Дрим Хаус» 2015-2019</p>
+    </footer>
+    <script src="js/slider.js"></script>
+</body>
+</html>
