--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 </div>
                 <div><img src="/img/l2.png" alt=""></div>
             </div>
-            <div class="l3-st">
+            <div class="l3-st l3-st2">
                 <div><img src="/img/l2.png" alt=""></div>
                 <div><h2>Непродуваемый угол</h2>
                     <p>В отличии от обычных чаш, выполненных по устаревшей методике и оборудовании или ручным методом, наша чашка "Двойной замок" изготовлена на современных станках, обладает сложным профилем, исключает продувание и промерзание углов даже в наших Сибирских широтах.</p>
