--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Дрим Хаус</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css">
-    <link rel="stylesheet" href="css/css.css">
+    <link rel="stylesheet" href="css/slider.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <script src="js/slider.js"></script>
 </head>
 <body>
     <header>
@@ -28,36 +29,33 @@
                 <p></p>
             </div>
         </div>
+        <div class="header-menu1">
+            <ul class="header-menu">
+                <li><a href=""><i class="fas fa-home"></i></a></li>
+                <li><a href="">Услуги</a></li>
+                <li><a href="">Цены</a></li>
+                <li><a href="">Доставка</a></li>
+                <li><a href="">Галерея</a></li>
+                <li><a href="">Каталог домов и бань</a></li>
+                <li><a href="">Отзывы</a></li>
+                <li><a href="">Кредит</a></li>
+                <li><a href="">Информация</a></li>
+                <li><a href="">Контакты</a></li>
+            </ul>
+        </div>
     </header>
-    <div class="l1-2">
-        <div>
-            <i class="far fa-clock"></i>
-            <p>Срок выполнения заказа 5-7 дней</p>
-        </div>
-        <div>
-            <i class="fas fa-car-side"></i>
-            <p>Поставка бруса в любых объемах</p>
-        </div>
-        <div>
-            <i class="fas fa-industry"></i>
-            <p>Европейская производственная линия</p>
-        </div>
-        <div>
-            <i class="far fa-money-bill-alt"></i>
-            <p>Лучшая цена на брус в городе</p>
-        </div>
-    </div>
     <div class="l1">
         <h2>Продажа бруса и малоэтажное строительство</h2>
         <p>Компания «Дрим Хаус» осуществляет производство и продажу обрезанного пило материала.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, dolor alias. Ad, cupiditate dolores est velit reiciendis autem quos quidem beatae cum odio quis, incidunt explicabo nostrum? Ducimus, blanditiis vitae?</p>
+        <p>Доставка осуществляется автотранспортом до потребителей в Московской, Тверской и других областей. Мы предлагаем обрезной пиломатериал хвойных пород. Основными видами нашей продукции являются: доска обрезная, брус, профилированный брус, оцилиндрованное бревно.</p>
+        <p>Произдство пило материала расположенно в Кедровке.</p>
     </div>
     <div class="l2">
         <h2>Ассортимент услуг</h2>
         <div class="table">
             <div class="brus">
                 <div>
-                    <img src="img/l2.png">
+                    <img src="img/l2.png" alt="a">
                     <h3><a href="#">Профилированный брус</a>
                         <p>140x140 | 140x190 | 190x190</p>
                     </h3>
@@ -79,17 +77,17 @@
             </div>
             <div class="table2">
                 <div class="komplekt">
-                    <img src="img/l22.png" alt="">
+                    <img src="img/l22.png" alt="a">
                     <h3>Собрать домокомплет</h3>
                     <button>Заказ</button>
                 </div>
                 <div class="projekt">
-                    <img src="img/l23.png">
+                    <img src="img/l23.png" alt="a">
                     <h3>Подготовить проект Вашего дома</h3>
                     <button>Подготовить проект</button>
                 </div>
                 <div class="key">
-                    <img src="img/l24.png">
+                    <img src="img/l24.png" alt="a">
                     <h3>Строительство "под ключ"</h3>
                     <button>Оставить заявку</button>
                 </div>
@@ -101,60 +99,33 @@
         <p><b>ЗВОНИТЕ!</b> Готовы обсудить все вопросы.</p>
         <div><h2>Осущетвляем доставку своим транспортом!</h2></div>
     </div>
-    <div class="l3">
-        <h1>Почему брус и строительство стоит заказать именно у нас</h1>
-        <div class="l3cont">
-            <div class="l3-st">
-                <div><h2>Уникальный профиль</h2>
-                    <p>Профилированный брус с увеличенным двойным шип пазом ускоряет сборку и исключает продувание дома, что дает существенную экономию Вашего бюджета на отоплении.</p>
-                </div>
-                <div><img src="/img/l2.png" alt=""></div>
-            </div>
-            <div class="l3-st l3-st2">
-                <div><img src="/img/l2.png" alt=""></div>
-                <div><h2>Непродуваемый угол</h2>
-                    <p>В отличии от обычных чаш, выполненных по устаревшей методике и оборудовании или ручным методом, наша чашка "Двойной замок" изготовлена на современных станках, обладает сложным профилем, исключает продувание и промерзание углов даже в наших Сибирских широтах.</p>
-                </div>
-            </div>
-            <div class="l3-st">
-                <div><h2>Строительство профессионалами</h2>
-                    <p>В нашей компании работают специалисты с более чем 6 летним опытом в гражданском строительстве, сборке деревянных домов, средний стаж которых составляет 12 лет.Специалисты постоянно проходят повышение квалификации, изучают современные технологии в строительстве, что гарантирует  качественно выполненную работу с соблюдением технологии сборки и строительства.</p>
-                </div>
-                <div><img src="/img/l2.png" alt=""></div>
-            </div>
+    <div class="l4">
+        <div class="facts">
+            <h2>5 фактов о том, что вы нашли надежного партнера</h2>
+            <ul>
+                <li type="square">Срок выполнения заказа 5-7 дней</li>
+                <li type="square">Поставка бруса в любых объемах</li>
+                <li type="square">Оптимальное соотношение цены и качества</li>
+                <li type="square">Европейская производственная линия</li>
+                <li type="square">Опыт более 10 лет, тысячи благодарных клиентов</li>
+            </ul>
         </div>
-    </div>
-    <!-- <div class="l4">
-        <div class="l4-s1">
-            <div>
-                <img src="img/l4 (1).jpg" alt="">
-            </div>
-            <div class="l4-s1-r2">
-                <img src="img/l4 (2).jpg" alt="">
-                <img src="img/l4 (3).jpg" alt="">
-            </div>
-        </div>
-        <div class="l4-s2">
-            <div><img src="img/l4 (4).jpg" alt=""></div>
-            <div class="l4-s2-r2"><a><i class="fas fa-angle-double-right"></i></a></div>
-        </div>
-    </div> -->
-    <div id="lg">
+        <div id="lg">
             <div class="row centered">
                 <h2>Наше производство</h2>
                 <div class="slider">
                     <div class="slider__wrapper">
                         <div class="slider__item">
-                            <img src="img/l4 (1).jpg">
+                            <img src="img/l41.jpg" alt="a">
                         </div>
                         <div class="slider__item">
-                            <img src="img/l4 (2).jpg">
+                            <img src="img/l42.jpg" alt="a">
                         </div>
                         <div class="slider__item">
-                            <img src="img/l4 (3).jpg">
+                            <img src="img/l43.jpg" alt="a">
                         </div>      
                         <div class="slider__item">
-                            <img src="img/l4 (4).jpg">
+                            <img src="img/l44.jpg" alt="a">
                         </div>
                     </div>
                     <a class="slider__control slider__control_left" href="#lg" role="button"></a>
@@ -162,14 +133,33 @@
                 </div>
             </div>
         </div>
+    </div>
     <footer>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2270.336127790467!2d86.13394571605266!3d55.31721633296912!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x42d80ee8609bdcb7%3A0x82391c335a31c004!2z0JLQvtGB0YLQvtGH0L3Ri9C5INCy0LXRgtC10YA!5e0!3m2!1sru!2sru!4v1544445670380"  allowfullscreen></iframe>
-        <h1>Контакты</h1>
-        <p><b>Офис:</b> Кемерово, ТЦ "Восточный ветер" ул. Тухачевского, 50/5, 4 этаж, офис 30</p>
-        <p><b>Телефоны:</b> +7 3842 590 777<br>+7 952 172 97 77</p>
-        <p><b>email:</b>stroyka.kem@mail.ru</p>
-        <p><a href="https://vk.com/club150133443"><i class="fab fa-vk"></i></a></p>
-        <p>© «Дрим Хаус» 2015-2019</p>
+        <div class="message-foot">
+            <h1>Пишите нам</h1>
+            <p>для получения консультации или заказа продукции</p>
+            <form action="">
+                <div class="n-n">
+                    <input type="text" placeholder="Ваше имя*">
+                    <input type="text" placeholder="Номер телефона*">
+                </div>
+                <input type="text" placeholder="Адрес доставки">
+                <textarea name="message" placeholder="Ваше сообщение"></textarea>
+                <p>* Отправляя свои данные, Вы даете согласие на обработку персональных данных.</p>
+                <div class="but-foot">
+                    <span>* Звездочкой отмечены обязательные для заполнения поля.</span>
+                    <button type="submit">Отправить</button>
+                </div>
+            </form>
+        </div>
+        <div class="kontakt-foot">
+            <h1>Контакты</h1>
+            <p><b>Офис:</b> Кемерово, ТЦ "Восточный ветер" ул. Тухачевского, 50/5, 4 этаж, офис 30</p>
+            <p><b>Телефоны:</b> +7 3842 590 777<br>+7 952 172 97 77</p>
+            <p><b>email:</b>stroyka.kem@mail.ru</p>
+            <p><a href="https://vk.com/club150133443"><i class="fab fa-vk"></i></a></p>
+            <p>© «Дрим Хаус» 2015-2019</p>
+        </div>
     </footer>
     <script src="js/slider.js"></script>
 </body>
