--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
         </div>
         <div class="header-menu1">
             <ul class="header-menu">
-                <li><a href=""><i class="fas fa-home"></i></a></li>
+                <li><a href="index.html"><i class="fas fa-home"></i></a></li>
                 <li><a href="">Услуги</a></li>
                 <li><a href="">Цены</a></li>
                 <li><a href="">Доставка</a></li>
                 <li><a href="">Галерея</a></li>
                 <li><a href="">Каталог домов и бань</a></li>
                 <li><a href="">Отзывы</a></li>
-                <li><a href="">Кредит</a></li>
+                <li><a href="page/kredit/kredit.html">Кредит</a></li>
                 <li><a href="">Информация</a></li>
-                <li><a href="">Контакты</a></li>
+                <li><a href="page/kontakt/cont.html">Контакты</a></li>
             </ul>
         </div>
     </header>
@@ -156,7 +156,7 @@
             <h1>Контакты</h1>
             <p><b>Офис:</b> Кемерово, ТЦ "Восточный ветер" ул. Тухачевского, 50/5, 4 этаж, офис 30</p>
             <p><b>Телефоны:</b> +7 3842 590 777<br>+7 952 172 97 77</p>
-            <p><b>email:</b>stroyka.kem@mail.ru</p>
+            <p><b>E-mail:</b> stroyka.kem@mail.ru</p>
             <p><a href="https://vk.com/club150133443"><i class="fab fa-vk"></i></a></p>
             <p>© «Дрим Хаус» 2015-2019</p>
         </div>
