--- a/index.html
+++ b/index.html
@@ -15,152 +15,193 @@
         <div class="header-mobile">
             <a class="logo" href="/">ДХ</a>
             <a class="logo2" href="/">Дрим Хаус</a>
-            <a class="hm-b-message" href="#"><i class="fab fa-telegram-plane"></i></a>
-            <a class="hm-b-call" href="#"><i class="fas fa-phone"></i></a>
-            <a class="hm-b-bar" href="#"><i class="fas fa-bars"></i></a>
-        </div>
-        <div class="zag">
-            <div class="header-table">
-                <div class="tlogo"><i class="fab fa-fort-awesome-alt"></i>Дрим Хаус</div>
-                <div class="htc">Телефон в Кемерово:<br>+7(384)25 90 777</div>
+            <div class="vipad">
+                <input type="checkbox" name="togglemessage" id="header-message" class="togglemessage">
+                <label for="header-message" class="togglemessage"><i class="fab fa-telegram-plane"></i></label>
+                <div class="hm-message">
+                    <form action="">
+                        <div class="n-n">
+                            <input type="text" placeholder="Ваше имя*">
+                            <input type="text" placeholder="Номер телефона*">
+                        </div>
+                        <input type="text" placeholder="Адрес доставки">
+                        <textarea name="message" placeholder="Ваше сообщение"></textarea>
+                        <p>* Отправляя свои данные, Вы даете согласие на обработку персональных данных.</p>
+                        <p>* Звездочкой отмечены обязательные для заполнения поля.</p>
+                        <button type="submit">Отправить</button>
+                    </form>
+                </div>
             </div>
-            <div class="l1tab">
-                <h1>ПРОИЗВОДСТВО И ПРОДАЖА <br> ПРОФИЛИРОВАННОГО БРУСА В КЕМЕРОВОСКОЙ ОБЛАСТИ <br> от 9500 руб./куб.м.</h1>
-                <p></p>
+            <div class="vipad">
+                <input type="checkbox" name="toggle" id="header-call" class="togglekontakt">
+                <label for="header-call" class="togglekontakt"><i class="fas fa-phone"></i></label>
+                <div class="hm-kontakt">
+                    <ul>
+                        <li>Городской: +7 3842 590 777</li>
+                        <li>Мобильный: +7 952 172 97 77</li>
+                        <li>E-mail: stroyka.kem@mail.ru</li>
+                        <li>Офис: Кемерово, ТЦ "Восточный ветер" ул. Тухачевского, 50/5, 4 этаж, офис 30</li>
+                    </ul>
+                </div>
             </div>
-        </div>
-        <div class="header-menu1">
-            <ul class="header-menu">
-                <li><a href="index.html"><i class="fas fa-home"></i></a></li>
-                <li><a href="">Услуги</a></li>
-                <li><a href="">Цены</a></li>
-                <li><a href="">Доставка</a></li>
-                <li><a href="">Галерея</a></li>
-                <li><a href="">Каталог домов и бань</a></li>
-                <li><a href="">Отзывы</a></li>
-                <li><a href="page/kredit/kredit.html">Кредит</a></li>
-                <li><a href="">Информация</a></li>
-                <li><a href="page/kontakt/cont.html">Контакты</a></li>
-            </ul>
-        </div>
-    </header>
-    <div class="l1">
-        <h2>Продажа бруса и малоэтажное строительство</h2>
-        <p>Компания «Дрим Хаус» осуществляет производство и продажу обрезанного пило материала.</p>
-        <p>Доставка осуществляется автотранспортом до потребителей в Московской, Тверской и других областей. Мы предлагаем обрезной пиломатериал хвойных пород. Основными видами нашей продукции являются: доска обрезная, брус, профилированный брус, оцилиндрованное бревно.</p>
-        <p>Произдство пило материала расположенно в Кедровке.</p>
-    </div>
-    <div class="l2">
-        <h2>Ассортимент услуг</h2>
-        <div class="table">
-            <div class="brus">
-                <div>
-                    <img src="img/l2.png" alt="a">
-                    <h3><a href="#">Профилированный брус</a>
-                        <p>140x140 | 140x190 | 190x190</p>
-                    </h3>
-                    <p>
-                        Длина - до 6 метров
-                    </p>
-                </div>
-                <div class="cena">
-                    <h3>Цена на проф.брус</h3>
-                    <p>Пихта - 9 500 руб./куб.м.</p>
-                    <p>Сосна - 10 500 руб./куб.м.</p>
-                    <p>Кедр - 11 500 руб./куб.м.</p>
-                    <h3>Цена за домокомплект с нарезанными чашками</h3>
-                    <p>Пихта - 11 500 руб./куб.м.</p>
-                    <p>Сосна - 12 000 руб./куб.м.</p>
-                    <p>Кедр - 13 500 руб./куб.м.</p>
-                </div>
-                <button>Заказать брус</button>
-            </div>
-            <div class="table2">
-                <div class="komplekt">
-                    <img src="img/l22.png" alt="a">
-                    <h3>Собрать домокомплет</h3>
-                    <button>Заказ</button>
-                </div>
-                <div class="projekt">
-                    <img src="img/l23.png" alt="a">
-                    <h3>Подготовить проект Вашего дома</h3>
-                    <button>Подготовить проект</button>
-                </div>
-                <div class="key">
-                    <img src="img/l24.png" alt="a">
-                    <h3>Строительство "под ключ"</h3>
-                    <button>Оставить заявку</button>
+            <div class="vipad">
+                <input type="checkbox" name="toggle" id="header-menu" class="togglemenu">
+                <label for="header-menu" class="togglemenu"><i class="fas fa-bars"></i></label>
+                <div class="hm-menu">
+                    <ul>
+                        <li class="activ"><a>Главная</a></li>
+                        <li><a href="">Услуги</a></li>
+                        <li><a href="">Доставка</a></li>
+                        <li><a href="">Каталог домов и бань</a></li>
+                        <li><a href="">Отзывы</a></li>
+                        <li><a href="page/kredit/kredit.html">Кредит</a></li>
+                        <li><a href="">Информация</a></li>
+                        <li><a href="page/kontakt/cont.html">Контакты</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
     </div>
-    <div class="lps">
-        <h1><i class="fas fa-phone-volume"></i> +7 952 172 97 77</h1>
-        <p><b>ЗВОНИТЕ!</b> Готовы обсудить все вопросы.</p>
-        <div><h2>Осущетвляем доставку своим транспортом!</h2></div>
-    </div>
-    <div class="l4">
-        <div class="facts">
-            <h2>5 фактов о том, что вы нашли надежного партнера</h2>
-            <ul>
-                <li type="square">Срок выполнения заказа 5-7 дней</li>
-                <li type="square">Поставка бруса в любых объемах</li>
-                <li type="square">Оптимальное соотношение цены и качества</li>
-                <li type="square">Европейская производственная линия</li>
-                <li type="square">Опыт более 10 лет, тысячи благодарных клиентов</li>
-            </ul>
+    <div class="zag">
+        <div class="header-table">
+            <div class="tlogo"><i class="fab fa-fort-awesome-alt"></i>Дрим Хаус</div>
+            <div class="htc">Телефон в Кемерово:<br>+7(384)25 90 777</div>
         </div>
-        <div id="lg">
-            <div class="row centered">
-                <h2>Наше производство</h2>
-                <div class="slider">
-                    <div class="slider__wrapper">
-                        <div class="slider__item">
-                            <img src="img/l41.jpg" alt="a">
-                        </div>
-                        <div class="slider__item">
-                            <img src="img/l42.jpg" alt="a">
-                        </div>
-                        <div class="slider__item">
-                            <img src="img/l43.jpg" alt="a">
-                        </div>      
-                        <div class="slider__item">
-                            <img src="img/l44.jpg" alt="a">
-                        </div>
+        <div class="l1tab">
+            <h1>ПРОИЗВОДСТВО И ПРОДАЖА <br> ПРОФИЛИРОВАННОГО БРУСА В КЕМЕРОВОСКОЙ ОБЛАСТИ <br> от 9500 руб./куб.м.</h1>
+            <p></p>
+        </div>
+    </div>
+    <div class="header-menu1">
+        <ul class="header-menu">
+            <li><a href="index.html"><i class="fas fa-home"></i></a></li>
+            <li><a href="">Услуги</a></li>
+            <li><a href="">Доставка</a></li>
+            <li><a href="">Каталог домов и бань</a></li>
+            <li><a href="">Отзывы</a></li>
+            <li><a href="page/kredit/kredit.html">Кредит</a></li>
+            <li><a href="">Информация</a></li>
+            <li><a href="page/kontakt/cont.html">Контакты</a></li>
+        </ul>
+    </div>
+</header>
+<div class="l1">
+    <h2>Продажа бруса и малоэтажное строительство</h2>
+    <p>Компания «Дрим Хаус» осуществляет производство и продажу обрезанного пило материала.</p>
+    <p>Доставка осуществляется автотранспортом до потребителей в Московской, Тверской и других областей. Мы предлагаем обрезной пиломатериал хвойных пород. Основными видами нашей продукции являются: доска обрезная, брус, профилированный брус, оцилиндрованное бревно.</p>
+    <p>Произдство пило материала расположенно в Кедровке.</p>
+</div>
+<div class="l2">
+    <h2>Ассортимент услуг</h2>
+    <div class="table">
+        <div class="brus">
+            <div>
+                <img src="img/l2.png" alt="a">
+                <h3><a href="#">Профилированный брус</a>
+                    <p>140x140 | 140x190 | 190x190</p>
+                </h3>
+                <p>
+                    Длина - до 6 метров
+                </p>
+            </div>
+            <div class="cena">
+                <h3>Цена на проф.брус</h3>
+                <p>Пихта - 9 500 руб./куб.м.</p>
+                <p>Сосна - 10 500 руб./куб.м.</p>
+                <p>Кедр - 11 500 руб./куб.м.</p>
+                <h3>Цена за домокомплект с нарезанными чашками</h3>
+                <p>Пихта - 11 500 руб./куб.м.</p>
+                <p>Сосна - 12 000 руб./куб.м.</p>
+                <p>Кедр - 13 500 руб./куб.м.</p>
+            </div>
+            <button>Заказать брус</button>
+        </div>
+        <div class="table2">
+            <div class="komplekt">
+                <img src="img/l22.png" alt="a">
+                <h3>Собрать домокомплет</h3>
+                <button>Заказ</button>
+            </div>
+            <div class="projekt">
+                <img src="img/l23.png" alt="a">
+                <h3>Подготовить проект Вашего дома</h3>
+                <button>Подготовить проект</button>
+            </div>
+            <div class="key">
+                <img src="img/l24.png" alt="a">
+                <h3>Строительство "под ключ"</h3>
+                <button>Оставить заявку</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="lps">
+    <h1><i class="fas fa-phone-volume"></i> +7 952 172 97 77</h1>
+    <p><b>ЗВОНИТЕ!</b> Готовы обсудить все вопросы.</p>
+    <div><h2>Осущетвляем доставку своим транспортом!</h2></div>
+</div>
+<div class="l4">
+    <div class="facts">
+        <h2>5 фактов о том, что вы нашли надежного партнера</h2>
+        <ul>
+            <li type="square">Срок выполнения заказа 5-7 дней</li>
+            <li type="square">Поставка бруса в любых объемах</li>
+            <li type="square">Оптимальное соотношение цены и качества</li>
+            <li type="square">Европейская производственная линия</li>
+            <li type="square">Опыт более 10 лет, тысячи благодарных клиентов</li>
+        </ul>
+    </div>
+    <div id="lg">
+        <div class="row centered">
+            <h2>Наше производство</h2>
+            <div class="slider">
+                <div class="slider__wrapper">
+                    <div class="slider__item">
+                        <img src="img/l41.jpg" alt="a">
                     </div>
-                    <a class="slider__control slider__control_left" href="#lg" role="button"></a>
-                    <a class="slider__control slider__control_right slider__control_show" href="#lg" role="button"></a>
+                    <div class="slider__item">
+                        <img src="img/l42.jpg" alt="a">
+                    </div>
+                    <div class="slider__item">
+                        <img src="img/l43.jpg" alt="a">
+                    </div>      
+                    <div class="slider__item">
+                        <img src="img/l44.jpg" alt="a">
+                    </div>
                 </div>
+                <a class="slider__control slider__control_left" href="#lg" role="button"></a>
+                <a class="slider__control slider__control_right slider__control_show" href="#lg" role="button"></a>
             </div>
         </div>
     </div>
-    <footer>
-        <div class="message-foot">
-            <h1>Пишите нам</h1>
-            <p>для получения консультации или заказа продукции</p>
-            <form action="">
-                <div class="n-n">
-                    <input type="text" placeholder="Ваше имя*">
-                    <input type="text" placeholder="Номер телефона*">
-                </div>
-                <input type="text" placeholder="Адрес доставки">
-                <textarea name="message" placeholder="Ваше сообщение"></textarea>
-                <p>* Отправляя свои данные, Вы даете согласие на обработку персональных данных.</p>
-                <div class="but-foot">
-                    <span>* Звездочкой отмечены обязательные для заполнения поля.</span>
-                    <button type="submit">Отправить</button>
-                </div>
-            </form>
-        </div>
-        <div class="kontakt-foot">
-            <h1>Контакты</h1>
-            <p><b>Офис:</b> Кемерово, ТЦ "Восточный ветер" ул. Тухачевского, 50/5, 4 этаж, офис 30</p>
-            <p><b>Телефоны:</b> +7 3842 590 777<br>+7 952 172 97 77</p>
-            <p><b>E-mail:</b> stroyka.kem@mail.ru</p>
-            <p><a href="https://vk.com/club150133443"><i class="fab fa-vk"></i></a></p>
-            <p>© «Дрим Хаус» 2015-2019</p>
-        </div>
-    </footer>
-    <script src="js/slider.js"></script>
+</div>
+<footer>
+    <div class="message-foot">
+        <h1>Пишите нам</h1>
+        <p>для получения консультации или заказа продукции</p>
+        <form action="">
+            <div class="n-n">
+                <input type="text" placeholder="Ваше имя*">
+                <input type="text" placeholder="Номер телефона*">
+            </div>
+            <input type="text" placeholder="Адрес доставки">
+            <textarea name="message" placeholder="Ваше сообщение"></textarea>
+            <p>* Отправляя свои данные, Вы даете согласие на обработку персональных данных.</p>
+            <div class="but-foot">
+                <span>* Звездочкой отмечены обязательные для заполнения поля.</span>
+                <button type="submit">Отправить</button>
+            </div>
+        </form>
+    </div>
+    <div class="kontakt-foot">
+        <h1>Контакты</h1>
+        <p><b>Офис:</b> Кемерово, ТЦ "Восточный ветер" ул. Тухачевского, 50/5, 4 этаж, офис 30</p>
+        <p><b>Телефоны:</b> +7 3842 590 777<br>+7 952 172 97 77</p>
+        <p><b>E-mail:</b> stroyka.kem@mail.ru</p>
+        <p><a href="https://vk.com/club150133443"><i class="fab fa-vk"></i></a></p>
+        <p>© «Дрим Хаус» 2015-2019</p>
+    </div>
+</footer>
+<script src="js/slider.js"></script>
 </body>
 </html>
